vbnc/vbnc/vbnc/tests/Errors/30311-26.vb
Class T
    Const M_Double As Single = #1/1/2008#
End Class